--- a/blox-ssv2.yml
+++ b/blox-ssv2.yml
@@ -10,7 +10,7 @@ x-logging: &logging
 services:
   ssv2-node:
     restart: "unless-stopped"
-    image: bloxstaking/ssv-node-shifu:${SSV2_NODE_TAG:-v0.3.0-rc.1}
+    image: bloxstaking/ssv-node-shifu:${SSV2_NODE_TAG:-latest}
     user: 12000:12000
     volumes:
       - ./blox-ssv-config.yaml:/config.yaml
