--- a/default.env
+++ b/default.env
@@ -117,7 +117,7 @@ CL_NODE=http://consensus:5052
 
 # SSV
 SSV_NODE_TAG=latest
-SSV2_NODE_TAG=v0.3.0-rc.1
+SSV2_NODE_TAG=latest
 
 # MEV-Boost
 MEV_DOCKER_TAG=latest
