--- a/vero/Dockerfile.binary
+++ b/vero/Dockerfile.binary
@@ -15,7 +15,7 @@ USER root
 RUN groupmod -g "${UID}" vero && usermod -u "${UID}" -g "${UID}" vero
 
 RUN set -eux; \
-        apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gosu ca-certificates tzdata git wget; \
+        apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gosu ca-certificates tzdata git wget curl; \
         rm -rf /var/lib/apt/lists/*; \
 # verify that the binary works
         gosu nobody true
