--- a/vero/Dockerfile.source
+++ b/vero/Dockerfile.source
@@ -37,7 +37,7 @@ RUN groupadd -g ${UID} ${USER} && \
     useradd --no-create-home --shell /bin/false -u ${UID} -g ${USER} ${USER}
 
 RUN set -eux; \
-        apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gosu ca-certificates tzdata git wget; \
+        apt-get update && DEBIAN_FRONTEND=noninteractive TZ=Etc/UTC apt-get install -y gosu ca-certificates tzdata git wget curl; \
         rm -rf /var/lib/apt/lists/*; \
 # verify that the binary works
         gosu nobody true
